# LaTeX-Converter

./: pyproject.toml
dados/: cabeçalho.dvi
relatorio/: cria.py
tests/: test_cria.py
