[tool.poetry]
name = "Pelé"
version = "0.1.0"
description = "feito para o rei"
authors = ["João Gabriel <jogabriel433@gmail.com>"]
readme = "README.md"
packages = [{include = "meu_projeto"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
